--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
-# binaries
-bin/
-dist/
-lib/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # editors
 *.swp
@@ -9,3 +24,7 @@ lib/
 .vs/
 .vscode/
 .DS_Store
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
