--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "build": "NODE_ENV=development webpack --mode development --config webpack.config.js --watch"
+    "build": "NODE_ENV=development webpack --mode development --config config/webpack-dev-config.js --watch",
+    "lint": "eslint src -c .eslintrc --ext js,jsx"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -16,8 +17,17 @@
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
+    "prettier": "^2.0.5",
     "style-loader": "^1.1.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
