--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,9 @@
   "version": "1.0",
   "description": "Take mini notes for each page and save them to look into later",
   "icons": {
-    "16": "icons/logo-small-16.png",
-    "48": "icons/logo-small-48.png",
-    "128": "icons/logo-small-128.png"
+    "16": "assets/icons/logo-small-16.png",
+    "48": "assets/icons/logo-small-48.png",
+    "128": "assets/icons/logo-small-128.png"
   },
   "background": {
     "scripts": ["background.js"]
