--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "build": "NODE_ENV=development webpack --mode development --config config/webpack-dev-config.js --watch",
     "lint": "eslint src -c .eslintrc --ext js,jsx"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": ["eslint --fix", "prettier --write"]
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
@@ -27,6 +35,8 @@
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.7",
     "prettier": "^2.0.5",
     "style-loader": "^1.1.4",
     "webpack": "^4.42.1",
