--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
   },
   "scripts": {
     "build": "NODE_ENV=development webpack --mode development --config config/webpack-dev-config.js --watch",
-    "lint": "eslint src -c .eslintrc --ext js,jsx"
+    "lint": "eslint src -c .eslintrc --ext js,jsx",
+    "lint:staged": "lint-staged"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
+  "pre-commit": "lint:staged",
   "lint-staged": {
-    "*.js": ["eslint --fix", "prettier --write"]
+    "*.js": ["eslint --fix"]
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -35,8 +32,8 @@
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
-    "husky": "^4.2.5",
     "lint-staged": "^10.1.7",
+    "pre-commit": "^1.2.2",
     "prettier": "^2.0.5",
     "style-loader": "^1.1.4",
     "webpack": "^4.42.1",
