--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "mini-notes",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
   "scripts": {
     "build": "NODE_ENV=development webpack --mode development --config config/webpack-dev-config.js --watch",
     "lint": "eslint src -c .eslintrc --ext js,jsx",
@@ -13,12 +9,22 @@
   },
   "pre-commit": "lint:staged",
   "lint-staged": {
-    "*.js": ["eslint --fix"]
+    "*.js": [
+      "eslint --fix"
+    ]
+  },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
+    "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
@@ -31,6 +37,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
+    "flow-bin": "^0.123.0",
     "html-webpack-plugin": "^4.2.0",
     "lint-staged": "^10.1.7",
     "pre-commit": "^1.2.2",
